# buscador_rutas_frescas

./: .gitignore  README.md  pyproject.toml
config/: weather.yaml
config/gee/: export_buildings.yaml  export_lst.yaml  export_ndvi.yaml
config/regions/: quilicura.yaml
config/sync_drive/: sync_drive.yaml  sync_heights_drive.yaml  sync_lst_drive.yaml  sync_ndvi_drive.yaml
pipelines/gee_bootstrap/: export_buildings.py  export_lst.py  export_ndvi.py  sync_drive.py
src/cool_routes/ingest/: gee.py
src/cool_routes/utils/: load_yaml.py  paths.py
